# openarmor-tray

./: Cargo.toml  README.md  tray-example.rc
src/: main.rs
