[package]
name = "openarmor-tray"
version = "0.1.0"
edition = "2021"

authors = ["Anubhav Gain <iamanubhavgain@gmail.com>"]
description = "OpenArmor is a cybersecurity tool aimed at enhancing security measures within software development."
license = "Apache-2.0"
homepage = "https://theopenarmor.org"
repository = "https://github.com/openarmor/openarmor-tray"

[dependencies]
tray-item = "*"
windows = { version = "0.58.0", features = ["Data_Xml_Dom", "UI_Notifications", "Win32_Foundation"] }

[build-dependencies]
windres = "*"
